Next version

Changed: Bombermaaan can be called from any directory now - no more DLL not found message (revision 464).
Changed: Log file and configuration file is placed in %APPDATA%\Bombermaaan directory (#1847811, revision 462, revision 463).


----------------------------


Version 1.3

Released on May 7, 2008

New feature: Almost unlimited number of levels. You can now add any number of levels. Plus, you don't have to call it L1 or L6 or whatever. Any filename like a.txt or coolbomberlevel.txt will be ok.
New feature: Enhanced level file format. You can specify the amount of items waiting in walls (tracker item #1847047) and the initial bomber skills for every match (tracker item #1847048).
New feature: Animated coin for the winner of a match.
New feature: Larger window/larger sprites available.
New feature: Invisibility as contamination (tracker item #1864528).
New feature: Flameproof as contamination (tracker item #1847833, revision 241).
New feature: Bombs start moving on special blocks (#1908105).
New feature: Mexican wave of the crowd in the victory screen (but the crowd may also be lazy...)
Changed: Accept space bar, numpad enter and return key to go to next screen (only return key worked so far)
Bug fix: Music started in pause when losing focus (tracker item #1856135).
Bug fix: Victory sound didn't end after Escape (#1851347).
Bug fix: F12 ended program (#1848194).
Bug fix: Bomb didn't explode during lift when bomber died (#1861692).
Bug fix: Computer/mouse pointer froze, clouds didn't move smoothly (#1870479, #1870410).


----------------------------


Version 1.02

Released on December 9, 2003

Changed: Rommel Santor made an update of his cool level editor!


----------------------------


Version 1.01

Released on December 6, 2002

New feature: Added a very easy to use, free level editor made by Rommel Santor.


----------------------------


Version 1.0

Released on November 3, 2002

Fixed a bug when a bomber holding a bomb is killed.

